insert styling, add dropdown to provide breeds in a later commit, set up area for images to be loaded in

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   <title>Puppy Love - A Flamingos Product</title>
 </head>
 <body>
-  
+  <nav>
+    <h1>Puppy Love</h1>
+    <select id="dropdown">
+
+    </select>
+  </nav>
+  <main id="image-container">
+    
+  </main>
 </body>
 </html>
